// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes matches snapshot 1`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`Recipes renders correctly 1`] = `
<p>
  Loading...
</p>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <p>
    Loading...
  </p>
</DocumentFragment>
`;

exports[`renders correctly 1`] = `
<p>
  Loading...
</p>
`;
